--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,9 +281,18 @@ a:focus {
     background-color: var(--black-color);
     color:var(--white-color);
 }
+
+header{
+    background-color: var(--white-color);
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
  .main-inner{
     background-color: var(--white-color);
-    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
     z-index: 999;
